@@ -1,5 +1,6 @@
 pgcenter (0.1.3) unstable; urgency=low
 
+  * pg_stat_activity.query formatting.
   * fix crash on sticking keys.
   * fix crash on switching from erroneous screen.
   * fix log viewing/config editing when connected through unix socket.
